= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [easy-error Unreleased] ==

=== Added ===

=== Changed ===

=== Deprecated ===

=== Removed ===

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [easy-error v0.1.0] - 2019-06-20 ==

Initial release