@@ -8,6 +8,8 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] an
 
 === Added ===
 
+* Added the `termination` module, which makes returning a `Result` from the `main` function more ergonomic.
+
 === Changed ===
 
 === Deprecated ===
